--- a/index.html
+++ b/index.html
@@ -3,9 +3,165 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Webflow Agency Template</title>
+    <!-- Link to External CSS Files -->
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/hero.css">
+    <link rel="stylesheet" href="css/cta.css">
+    <link rel="stylesheet" href="css/stats.css">
+    <link rel="stylesheet" href="css/testimonials.css">
+    <link rel="stylesheet" href="css/ready-focus.css">
+    <link rel="stylesheet" href="css/contact.css">
+    <link rel="stylesheet" href="css/footer.css">
 </head>
 <body>
-    
+    <!-- Header Section -->
+    <header class="header">
+        <nav class="nav container">
+            <div class="logo">LOGO</div>
+            <a href="#" class="btn">Sign Up</a>
+        </nav>
+    </header>
+
+    <!-- Hero Section -->
+    <section class="hero">
+        <div class="container">
+            <div class="hero-content">
+                <h1>Cool Dark UI Template for Webflow Agencies!</h1>
+                <a href="#" class="btn btn-large">Stay Focused</a>
+            </div>
+        </div>
+    </section>
+
+    <!-- See It in Action Section -->
+    <section class="cta">
+        <div class="container">
+            <div class="cta-content">
+                <div class="cta-text">
+                    <h2>See It in Action</h2>
+                    <p>Explore the live preview and imagine your brand in this bold new look.</p>
+                    <a href="#" class="btn btn-large">Launch Live Preview</a>
+                </div>
+                <div class="cta-mockup">
+                    <div class="mockup-device">
+                        <div class="mockup-screen">
+                            <h3>Webflow Conf 2022</h3>
+                            <p>Thank you for making Webflow Conf 2022 our best event yet. Catch up on what was announced and watch all the breakout sessions now on Webflow TV.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Stats Section -->
+    <section class="stats">
+        <div class="container">
+            <div class="stats-container">
+                <h2 class="stats-title">Joined Thousands of Productive Users</h2>
+                <div class="stats-grid">
+                    <div class="stat-item">
+                        <div class="stat-number">50K</div>
+                        <div class="stat-label">Active Users</div>
+                    </div>
+                    <div class="stat-item">
+                        <div class="stat-number">2M+</div>
+                        <div class="stat-label">Focus Sessions</div>
+                    </div>
+                    <div class="stat-item">
+                        <div class="stat-number">95%</div>
+                        <div class="stat-label">Satisfaction Rate</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Testimonials Section -->
+    <section class="testimonials">
+        <div class="container">
+            <h2 class="section-title">What our users say</h2>
+            <div class="testimonials-grid">
+                <div class="testimonial-card">
+                    <div class="stars">★★★★★</div>
+                    <h3 class="testimonial-title">Loved by Designers</h3>
+                    <p class="testimonial-text">This template instantly leveled up our presence. - Studio Vertex</p>
+                    <div class="reviewer">
+                        <div class="reviewer-avatar"></div>
+                        <div class="reviewer-info">
+                            <h4>Reviewer name</h4>
+                            <p>Date</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="testimonial-card">
+                    <div class="stars">★★★★★</div>
+                    <h3 class="testimonial-title">Loved by Designers</h3>
+                    <p class="testimonial-text">This template instantly leveled up our presence. - Studio Vertex</p>
+                    <div class="reviewer">
+                        <div class="reviewer-avatar"></div>
+                        <div class="reviewer-info">
+                            <h4>Reviewer name</h4>
+                            <p>Date</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Ready to Focus Section -->
+    <section class="ready-focus">
+        <div class="container">
+            <h2>Ready to Focus?</h2>
+            <p>Join thousands of productive users and transform your workflow with our powerful template designed for modern agencies.</p>
+            <a href="#" class="btn btn-white btn-large">Get Started Today</a>
+        </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section class="contact">
+        <div class="container">
+            <div class="contact-content">
+                <div class="contact-text">
+                    <h2>Let's Get in Touch</h2>
+                </div>
+                <div class="contact-form">
+                    <form>
+                        <div class="form-group">
+                            <label for="email">Email</label>
+                            <input type="email" id="email" placeholder="example@email.com">
+                        </div>
+                        <div class="form-group">
+                            <label for="name">Name</label>
+                            <input type="text" id="name" placeholder="full name">
+                        </div>
+                        <div class="form-group">
+                            <label for="message">Message</label>
+                            <textarea id="message" placeholder="write your message...."></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-full">Get in Touch</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer Section -->
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-content">
+                <div class="logo">LOGO</div>
+                <p class="footer-text">Ready to elevate your online presence? Contact us today to discuss your project and discover how we can bring your vision to life.</p>
+                <nav class="footer-nav">
+                    <a href="#">Home</a>
+                    <a href="#">About</a>
+                    <a href="#">How it Works</a>
+                    <a href="#">Services</a>
+                </nav>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
