--- a/index.html
+++ b/index.html
@@ -35,25 +35,19 @@
     </section>
 
     <!-- See It in Action Section -->
-    <section class="cta">
-        <div class="container">
-            <div class="cta-content">
-                <div class="cta-text">
-                    <h2>See It in Action</h2>
-                    <p>Explore the live preview and imagine your brand in this bold new look.</p>
-                    <a href="#" class="btn btn-large">Launch Live Preview</a>
-                </div>
-                <div class="cta-mockup">
-                    <div class="mockup-device">
-                        <div class="mockup-screen">
-                            <h3>Webflow Conf 2022</h3>
-                            <p>Thank you for making Webflow Conf 2022 our best event yet. Catch up on what was announced and watch all the breakout sessions now on Webflow TV.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
+   <section class="see-it-action">
+    <div class="container">
+        <div class="see-it-action-text">
+            <h2>See It in Action</h2>
+            <p>Explore the live preview and imagine your brand in this bold new look.</p>
+            <a href="#" class="btn btn-large">Launch Live Preview</a>
         </div>
-    </section>
+        <div class="see-it-action-image">
+            <img src="/images/wc-mini.png" alt="Product Image">
+        </div>
+    </div>
+</section>
+
 
     <!-- Stats Section -->
     <section class="stats">
@@ -79,46 +73,76 @@
     </section>
 
     <!-- Testimonials Section -->
-    <section class="testimonials">
-        <div class="container">
-            <h2 class="section-title">What our users say</h2>
-            <div class="testimonials-grid">
-                <div class="testimonial-card">
-                    <div class="stars">★★★★★</div>
-                    <h3 class="testimonial-title">Loved by Designers</h3>
-                    <p class="testimonial-text">This template instantly leveled up our presence. - Studio Vertex</p>
-                    <div class="reviewer">
-                        <div class="reviewer-avatar"></div>
-                        <div class="reviewer-info">
-                            <h4>Reviewer name</h4>
-                            <p>Date</p>
-                        </div>
+  <section class="testimonials">
+    <div class="container">
+        <h2 class="section-title">What our users say</h2>
+        <div class="testimonials-grid">
+            <div class="testimonial-card">
+                <div class="stars">★★★★★</div>
+                <h3 class="testimonial-title">Loved by Designers</h3>
+                <p class="testimonial-text">This template instantly leveled up our presence. - Studio Vertex</p>
+                <div class="reviewer">
+                    <!-- Circle Image at the left -->
+                    <div class="reviewer-avatar">
+                        <img src="/images/avatar.png" alt="Reviewer Avatar">
+                    </div>
+                    <div class="reviewer-info">
+                        <h4>Reviewer name</h4>
+                        <p>Date</p>
                     </div>
                 </div>
-                <div class="testimonial-card">
-                    <div class="stars">★★★★★</div>
-                    <h3 class="testimonial-title">Loved by Designers</h3>
-                    <p class="testimonial-text">This template instantly leveled up our presence. - Studio Vertex</p>
-                    <div class="reviewer">
-                        <div class="reviewer-avatar"></div>
-                        <div class="reviewer-info">
-                            <h4>Reviewer name</h4>
-                            <p>Date</p>
-                        </div>
+            </div>
+            <div class="testimonial-card">
+                <div class="stars">★★★★★</div>
+                <h3 class="testimonial-title">Loved by Designers</h3>
+                <p class="testimonial-text">This template instantly leveled up our presence. - Studio Vertex</p>
+                <div class="reviewer">
+                    <!-- Circle Image at the left -->
+                    <div class="reviewer-avatar">
+                        <img src="/images/avatar.png" alt="Reviewer Avatar">
+                    </div>
+                    <div class="reviewer-info">
+                        <h4>Reviewer name</h4>
+                        <p>Date</p>
+                    </div>
+                </div>
+            </div>
+            <div class="testimonial-card">
+                <div class="stars">★★★★★</div>
+                <h3 class="testimonial-title">Loved by Designers</h3>
+                <p class="testimonial-text">This template instantly leveled up our presence. - Studio Vertex</p>
+                <div class="reviewer">
+                    <!-- Circle Image at the left -->
+                    <div class="reviewer-avatar">
+                        <img src="/images/avatar.png" alt="Reviewer Avatar">
+                    </div>
+                    <div class="reviewer-info">
+                        <h4>Reviewer name</h4>
+                        <p>Date</p>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
+</section>
+
+
+
 
     <!-- Ready to Focus Section -->
-    <section class="ready-focus">
-        <div class="container">
-            <h2>Ready to Focus?</h2>
-            <p>Join thousands of productive users and transform your workflow with our powerful template designed for modern agencies.</p>
-            <a href="#" class="btn btn-white btn-large">Get Started Today</a>
+   <section class="ready-focus">
+    <div class="container">
+        <div class="ready-focus-text">
+            <h2>Ready to focus better</h2>
+            <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+            <a href="#" class="btn btn-large">Get Started Free</a>
         </div>
-    </section>
+        <div class="ready-focus-image">
+            <img src="/images/wc-big.png" alt="Product Image">
+        </div>
+    </div>
+</section>
+
 
     <!-- Contact Section -->
     <section class="contact">
