--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <a href="#" class="btn btn-large">Launch Live Preview</a>
         </div>
         <div class="see-it-action-image">
-            <img src="/images/wc-mini.png" alt="Product Image">
+            <img src="images/wc-mini.png" alt="Product Image">
         </div>
     </div>
 </section>
@@ -84,7 +84,7 @@
                 <div class="reviewer">
                     <!-- Circle Image at the left -->
                     <div class="reviewer-avatar">
-                        <img src="/images/avatar.png" alt="Reviewer Avatar">
+                        <img src="images/avatar.png" alt="Reviewer Avatar">
                     </div>
                     <div class="reviewer-info">
                         <h4>Reviewer name</h4>
@@ -99,7 +99,7 @@
                 <div class="reviewer">
                     <!-- Circle Image at the left -->
                     <div class="reviewer-avatar">
-                        <img src="/images/avatar.png" alt="Reviewer Avatar">
+                        <img src="images/avatar.png" alt="Reviewer Avatar">
                     </div>
                     <div class="reviewer-info">
                         <h4>Reviewer name</h4>
@@ -114,7 +114,7 @@
                 <div class="reviewer">
                     <!-- Circle Image at the left -->
                     <div class="reviewer-avatar">
-                        <img src="/images/avatar.png" alt="Reviewer Avatar">
+                        <img src="images/avatar.png" alt="Reviewer Avatar">
                     </div>
                     <div class="reviewer-info">
                         <h4>Reviewer name</h4>
@@ -138,7 +138,7 @@
             <a href="#" class="btn btn-large">Get Started Free</a>
         </div>
         <div class="ready-focus-image">
-            <img src="/images/wc-big.png" alt="Product Image">
+            <img src="images/wc-big.png" alt="Product Image">
         </div>
     </div>
 </section>
